working on post

--- a/sinatra/views/index.html
+++ b/sinatra/views/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1> NEWS loading..</h1> 
     <form method="post" action="/">
-        <label>Enter Your Name</label><br>
-        <input type="text" name="firstName" placeholder="Enter first name..." required>
-        <input type="text" name="lastName" placeholder="Enter last name..." required>
-        <input type="submit" value="Add Name">
+        <label>Enter Your Feed</label><br>
+        <input type="text" name="text" placeholder="Enter somthing..." required>
+        
+        <input type="submit" value="Add feed">
         </form>
 </body>
 </html>
